--- a/libhello/.gitignore
+++ b/libhello/.gitignore
@@ -1,10 +1,7 @@
-.bdep/
-
-# Local default options files.
-#
-.build2/local/
-
 # Compiler/linker output.
+#
+# Note that *.exe.dlls directories can be symlinks thus
+# no trailing /.
 #
 *.d
 *.t
@@ -26,7 +23,7 @@
 *.pdb
 *.ilk
 *.exe
-*.exe.dlls/
+*.exe.dlls
 *.exe.manifest
 *.pc
 
